--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,16 @@
         app:layout_constraintTop_toBottomOf="@id/searchEditText"
         android:text="@string/to_details" />
 
+    <Button
+        android:id="@+id/toSearchButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="@string/search"
+        app:layout_constraintTop_toBottomOf="@+id/toDetailsActivityButton"
+
+        />
+
     <TextView
         android:id="@+id/totalCountTextView"
         android:layout_width="match_parent"
@@ -44,7 +54,7 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toDetailsActivityButton"
+        app:layout_constraintTop_toBottomOf="@+id/toSearchButton"
         tools:text="Number of results: 100" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -53,5 +63,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@id/toDetailsActivityButton" />
+        app:layout_constraintTop_toBottomOf="@id/totalCountTextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
